Increased version to 1.0.0

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: epub
-version: 0.0.1-dev
+version: 1.0.0
 author: Colin Nelson <colin@ifdevthentalk.com>
 description: Epub Parser for Dart
 homepage: https://github.com/orthros/dart-epub
