--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,11 +6,10 @@ homepage: https://github.com/orthros/dart-epub
 environment:
   sdk: '>=1.13.2 <2.0.0'
 dependencies:
-  async: any
-  archive: any
-  xml: any
-  image:
-    git: git://github.com/brendan-duncan/image.git
+  async: ^1.13.2
+  archive: ^1.0.28
+  xml: ^2.5.0
+  image: ^1.1.26
 dev_dependencies:  
   scheduled_test: '^0.12.0'
   test: '^0.12.7'
