--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ doc/api/
 # Don't commit pubspec lock file 
 # (Library packages only! Remove pattern if developing an application package)
 pubspec.lock
+
+#Ignore VSCode Directory
+.vscode/
