--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,13 +4,13 @@ author: Colin Nelson <colin@ifdevthentalk.com>
 description: Epub Parser for Dart
 homepage: https://github.com/orthros/dart-epub
 environment:
-  sdk: '>=1.13.2 <2.0.0'
+  sdk: ">=1.21.0 <2.0.0"
 dependencies:
-  async: ^1.13.2
-  archive: ^1.0.28
-  xml: ^2.5.0
-  image: ^1.1.26
+  async: "^1.8.0"
+  archive: "^1.0.33"
+  xml: "^2.6.0"
+  image: "^1.1.29"
 dev_dependencies:  
-  scheduled_test: '^0.12.0'
-  test: '^0.12.7'
-  path: any
+  scheduled_test: "^0.12.0"
+  test: "^0.12.0"
+  path: "^1.5.1"
