--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,8 @@ before_script:
  - chmod +x ./tool/travis.sh
  - pub get
 script: ./tool/travis.sh
+deploy:
+  provider: script
+  script: ./tool/publish.sh
+  on:
+    branch: master
