--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ author: Colin Nelson <colinnlsn@gmail.com>
 description: Epub Parser for Dart. Suitable for use on the Web or in Flutter 
 homepage: https://github.com/orthros/dart-epub
 environment:
-  sdk: ">=1.21.0 <2.0.0"
+  sdk: ">=1.21.0 <=2.0.0"
 dependencies:
   async: "^1.8.0"
   archive: "^1.0.33"
