--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: epub
-version: 1.2.6
+version: 1.2.7
 author: Colin Nelson <colinnlsn@gmail.com>
 description: Epub Parser for Dart. Suitable for use on the Web or in Flutter 
 homepage: https://github.com/orthros/dart-epub
 environment:
-  sdk: ">=1.21.0 <=2.0.0"
+  sdk: ">=1.21.0 <2.0.1"
 dependencies:
   async: "^1.8.0"
   archive: "^1.0.33"
