--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: dart
 dart: 
   - stable
-  - dev
 sudo: false
 before_script:
  - chmod +x ./tool/travis.sh
@@ -14,4 +13,4 @@ deploy:
   skip_cleanup: true
   on:
     branch: master
-    dart: dev
+    dart: stable
