--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,17 @@
 name: epub
 version: 2.0.2
 author: Colin Nelson <colinnlsn@gmail.com>
-description: Epub Parser for Dart. Suitable for use on the Server, the Web, or in Flutter 
+description: Epub Parser for Dart. Suitable for use on the Server, the Web, or in Flutter
 homepage: https://github.com/orthros/dart-epub
 environment:
-  sdk: ">=2.0.0-dev.61.0 <3.0.0"
+  sdk: ">=2.0.0 <3.0.0"
 dependencies:
-  async: ">=1.8.0 <2.1.0"
+  async: ">=1.8.0 <3.0.0"
   archive: "^2.0.0"
   quiver: '>=2.0.0 <3.0.0'
   xml: ">=2.6.0 <4.0.0"
   image: ">=1.1.33 <3.0.0"
-  dart2_constant: ^1.0.1  
+  dart2_constant: ^1.0.1
 dev_dependencies:
   test: "^1.0.0"
   path: "^1.5.1"
