--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ dependencies:
   async: ">=1.8.0 <3.0.0"
   archive: "^2.0.0"
   quiver: ">=2.0.0 <3.0.0"
-  xml: ">=2.6.0 <4.0.0"
+  xml: "^4.2.0"
   image: ">=1.1.33 <3.0.0"
   dart2_constant: ^1.0.1
 dev_dependencies:
